--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -25,15 +25,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Virtual World Framework</a>
+          <a class="navbar-brand" href="#">
+            <img src="/images/vwf-logo-100x100.png" class="pull-left" width="60" height="50" alt="VWF Duck Logo">
+            <span class="pull-right">Virtual<br>World<br>Framework</span>
+          </a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Getting Started</a></li>
+            <li><a href="#">Getting Started</a></li>
             <li><a href="#">Demos</a></li>
             <li><a href="#">Documentation</a></li>
             <li><a href="#">Downloads</a></li>
           </ul>
+          <a class="btn btn-primary navbar-btn pull-right" role="button" href="#">View Source on GitHub</a>
         </div><!--/.nav-collapse -->
       </div>
     </div>
@@ -42,46 +46,58 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h2>Welcome to the 3D collaborative web.</h2>
+            <h1 class="vwf-title">Collaborative. 3D.<br>In Minutes.</h1>
             <p>Virtual World Framework allows you to create multiuser apps without the headache.</p>
+            <br>
+            <p>Create your own Pong app in 10 minutes. Check out our <a href="#">Getting Started Guide</a>.</p>
           </div>
-          <div class="col-md-6"> 
-            <img src="/images/vwf-logo.png" class="img-responsive" alt="">
-            <p>
-              Send this link to a friend to play them:
-              <input type="email" class="form-control" id="vwfPongId" placeholder="Enter email">
-            </p>
-            <p><a href="#">Create your own</a> Pong app in 10 minutes.</p>
+          <div class="col-md-6">
+            <iframe class="vwf-frame" id="pongFrame" frameborder="0" src=""></iframe>
+            <div class="input-group" data-toggle="tooltip" data-title="Copy link to play with a friend." data-placement="bottom">
+              <input type="text" class="form-control" id="vwfPongId" placeholder="Loading VWF...">
+              <span class="input-group-btn">
+                <button class="btn btn-primary" type="button">Copy!</button>
+              </span>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
     <div class="container">
-      <h2>What's Next?</h2>
+      <h1>What's Next?</h1>
 
       <div class="panel panel-default">
         <div class="panel-body">
-          <a href="#">See some demos.</a>
+          <h4>See some <a href="#">demos.</a></h4>
         </div>
       </div>
 
       <div class="panel panel-default">
         <div class="panel-body">
-          <a href="#">Follow other examples.</a>
+          <h4>Follow other <a href="#">examples.</a></h4>
         </div>
       </div>
 
       <div class="panel panel-default">
         <div class="panel-body">
-          <a href="#">Browse documentation.</a>
+          <h4>Browse our <a href="#">documentation.</a></h4>
         </div>
       </div>
     </div><!-- /.container -->
 
+    <!-- Footer
+    ================================================== -->
+    <footer class="vwf-footer">
+      <div class="container">
+        <p>Development of the Virtual World Framework is sponsored by the Department of Defense and is licensed using Apache II. Source is available on Github.</p>
+      </div>
+    </footer>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="js/jquery-1.10.2.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
