--- a/index.html
+++ b/index.html
@@ -65,6 +65,34 @@
     </div>
 
     <div class="container">
+      <div class="row feature-row">
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-refresh center-block"></span>
+          <h3>Simple Shared State</h3>
+          <p>
+            Synchronizes state automatically.  Just make a change in one browser and see it update in the other.
+          </p>
+        </div>
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-refresh center-block"></span>
+          <h3>Simple Shared State</h3>
+          <p>
+            Synchronizes state automatically.  Just make a change in one browser and see it update in the other.
+          </p>
+        </div>
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-refresh center-block"></span>
+          <h3>Simple Shared State</h3>
+          <p>
+            Synchronizes state automatically.  Just make a change in one browser and see it update in the other.
+          </p>
+        </div>
+      </div>
+    </div><!-- /.container -->
+
+    <!-- Need some border here.... -->
+
+    <div class="container">
       <h1>What's Next?</h1>
 
       <div class="panel panel-default">
@@ -85,6 +113,7 @@
         </div>
       </div>
     </div><!-- /.container -->
+
 
     <!-- Footer
     ================================================== -->
