Update feature descriptions.

--- a/index.html
+++ b/index.html
@@ -68,23 +68,23 @@
       <div class="row feature-row">
         <div class="col-md-4">
           <span class="glyphicon glyphicon-refresh center-block"></span>
-          <h3>Simple Shared State</h3>
+          <h3>Collaborative</h3>
           <p>
-            Synchronizes state automatically.  Just make a change in one browser and see it update in the other.
+            Seamlessly share state between users.
           </p>
         </div>
         <div class="col-md-4">
           <span class="glyphicon glyphicon-refresh center-block"></span>
-          <h3>Simple Shared State</h3>
+          <h3>Immersive</h3>
           <p>
-            Synchronizes state automatically.  Just make a change in one browser and see it update in the other.
+            Go beyond text and images. 3D. WebRTC. Or roll your own driver and the sky's the limit.
           </p>
         </div>
         <div class="col-md-4">
           <span class="glyphicon glyphicon-refresh center-block"></span>
-          <h3>Simple Shared State</h3>
+          <h3>Integrated</h3>
           <p>
-            Synchronizes state automatically.  Just make a change in one browser and see it update in the other.
+            All the tools you need in one place. It just works.
           </p>
         </div>
       </div>
