Add new next step images.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h1 class="vwf-title">Collaborative. 3D.<br>In Minutes.</h1>
+            <h1 class="vwf-title">The Next 3D Platform<br>Is Your Browser</h1>
             <p>Virtual World Framework allows you to create multiuser apps without the headache.</p>
             <br>
             <p>Create your own Pong app in 10 minutes. Check out our <a href="#">Getting Started Guide</a>.</p>
@@ -90,30 +90,63 @@
       </div>
     </div><!-- /.container -->
 
-    <!-- Need some border here.... -->
+    <div class="get-started">
+      <div class="container">
+        <h1>Ready To Get Started?</h1>
 
-    <div class="container">
-      <h1>What's Next?</h1>
-
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <h4>See some <a href="#">demos.</a></h4>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div class="row">
+              <div class="col-md-6">
+                <h3>See other <a href="#">demos</a> to get an idea of what's possible.</h3>
+              </div>
+              <div class="col-md-6 img-get-started">
+                <img src="/images/screenshot-bzflag.png">
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
 
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <h4>Follow other <a href="#">examples.</a></h4>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div class="row">
+              <div class="col-md-6">
+                <h3>Browse our <a href="#">cookbook</a> and learn the basics.</h3>
+              </div>
+              <div class="col-md-6 img-get-started">
+                <img src="/images/screenshot-cookbook.png">
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
 
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <h4>Browse our <a href="#">documentation.</a></h4>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div class="row">
+              <div class="col-md-6">
+                <h3>Write an app! Use our <a href="#">documentation</a> if you get stuck.</h3>
+              </div>
+              <div class="col-md-6 img-get-started">
+                <img src="/images/screenshot-documentation.png">
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </div><!-- /.container -->
 
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div class="row">
+              <div class="col-md-6">
+                <h3>Get involved. Check out our <a href="#">source on Github</a>.</h3>
+              </div>
+              <div class="col-md-6 img-get-started">
+                <img src="/images/screenshot-duck-plus-octocat.png">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div><!-- /.container -->
+    </div><!-- /.feature-wrap -->
 
     <!-- Footer
     ================================================== -->
