--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">
-            <img src="/images/vwf-logo-100x100.png" class="pull-left" width="60" height="50" alt="VWF Duck Logo">
+            <img src="/images/vwf-logo-100x100.png" class="pull-left" alt="VWF Duck Logo">
             <span class="pull-right">Virtual<br>World<br>Framework</span>
           </a>
         </div>
