--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
     <div class="container">
       <div class="row feature-row">
         <div class="col-md-4">
-          <span class="glyphicon glyphicon-refresh center-block"></span>
+          <img class="img-responsive center-block" src="/images/collaboration-icon.png">
           <h3>Collaborative</h3>
           <p>
             Seamlessly share state between users.
           </p>
         </div>
         <div class="col-md-4">
-          <span class="glyphicon glyphicon-refresh center-block"></span>
+          <img class="img-responsive center-block" src="/images/3d-glasses-icon.png">
           <h3>Immersive</h3>
           <p>
             Go beyond text and images. 3D. WebRTC. Or roll your own driver and the sky's the limit.
           </p>
         </div>
         <div class="col-md-4">
-          <span class="glyphicon glyphicon-refresh center-block"></span>
+          <img class="img-responsive center-block" src="/images/toolbox-icon.png">
           <h3>Integrated</h3>
           <p>
             All the tools you need in one place. It just works.
@@ -98,7 +98,7 @@
           <div class="panel-body">
             <div class="row">
               <div class="col-md-6">
-                <h3>See other <a href="#">demos</a> to get an idea of what's possible.</h3>
+                <h3>Get inspired. <small>Check out other <a href="#">demos</a> for ideas of what's possible.</small></h3>
               </div>
               <div class="col-md-6 img-get-started">
                 <img src="/images/screenshot-bzflag.png">
@@ -111,7 +111,7 @@
           <div class="panel-body">
             <div class="row">
               <div class="col-md-6">
-                <h3>Browse our <a href="#">cookbook</a> and learn the basics.</h3>
+                <h3>Learn the basics. <small>Browse our <a href="#">cookbook</a>.</small></h3>
               </div>
               <div class="col-md-6 img-get-started">
                 <img src="/images/screenshot-cookbook.png">
@@ -124,7 +124,7 @@
           <div class="panel-body">
             <div class="row">
               <div class="col-md-6">
-                <h3>Write an app! Use our <a href="#">documentation</a> if you get stuck.</h3>
+                <h3>Write an app! <small>Use our <a href="#">documentation</a> if you get stuck.</small></h3>
               </div>
               <div class="col-md-6 img-get-started">
                 <img src="/images/screenshot-documentation.png">
@@ -137,7 +137,7 @@
           <div class="panel-body">
             <div class="row">
               <div class="col-md-6">
-                <h3>Get involved. Check out our <a href="#">source on Github</a>.</h3>
+                <h3>Get involved. <small>Check out our <a href="#">source on Github</a>.</small></h3>
               </div>
               <div class="col-md-6 img-get-started">
                 <img src="/images/screenshot-duck-plus-octocat.png">
@@ -153,6 +153,7 @@
     <footer class="vwf-footer">
       <div class="container">
         <p>Development of the Virtual World Framework is sponsored by the Department of Defense and is licensed using Apache II. Source is available on Github.</p>
+        <p>"Collaboration" symbol by Krisada, "Toolbox" symbol by Dolly Vu, "3D Glasses" symbol by Fabio Grande, from <a href="http://thenounproject.com">The Noun Project</a> collection.
       </div>
     </footer>
 
