Fix the menu in responsive situations.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li><a href="#">Documentation</a></li>
             <li><a href="#">Downloads</a></li>
           </ul>
-          <a class="btn btn-primary navbar-btn pull-right" role="button" href="#">View Source on GitHub</a>
+          <a class="btn btn-primary navbar-btn pull-right" role="button" href="#">View on GitHub</a>
         </div><!--/.nav-collapse -->
       </div>
     </div>
@@ -92,7 +92,7 @@
 
     <div class="get-started">
       <div class="container">
-        <h1>Ready To Get Started?</h1>
+        <h2>Ready To Get Started?</h2>
 
         <div class="panel panel-default">
           <div class="panel-body">
