--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
         <div class="row">
           <div class="col-md-6">
             <h1 class="vwf-title">The Next 3D Platform<br>Is Your Browser</h1>
-            <p>Virtual World Framework allows you to create multiuser apps without the headache.</p>
+            <p>Create interactive, multi-user apps without the headache.</p>
             <br>
             <p>Create your own Pong app in 10 minutes. Check out our <a href="#">Getting Started Guide</a>.</p>
           </div>
-          <div class="col-md-6">
+          
+          <div class="col-md-6 hidden-xs">
             <iframe class="vwf-frame" id="pongFrame" frameborder="0" src=""></iframe>
             <div class="input-group" data-toggle="tooltip" data-title="Copy link to play with a friend." data-placement="bottom">
               <input type="text" class="form-control" id="vwfPongId" placeholder="Loading VWF..." disabled="true">
@@ -66,21 +67,21 @@
 
     <div class="container">
       <div class="row feature-row">
-        <div class="col-md-4">
+        <div class="col-sm-4">
           <img class="img-responsive center-block" src="/images/collaboration-icon.png">
           <h3>Collaborative</h3>
           <p>
             Seamlessly share state between users.
           </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-4">
           <img class="img-responsive center-block" src="/images/3d-glasses-icon.png">
           <h3>Immersive</h3>
           <p>
             Go beyond text and images. 3D. WebRTC. Or roll your own driver and the sky's the limit.
           </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-4">
           <img class="img-responsive center-block" src="/images/toolbox-icon.png">
           <h3>Integrated</h3>
           <p>
@@ -97,11 +98,11 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-sm-6">
                 <h3>Get inspired. <small>Check out other <a href="#">demos</a> for ideas of what's possible.</small></h3>
               </div>
-              <div class="col-md-6 img-get-started">
-                <img src="/images/screenshot-bzflag.png">
+              <div class="col-sm-6 img-get-started">
+                <img class="img-responsive hidden-xs" src="/images/screenshot-bzflag.png">
               </div>
             </div>
           </div>
@@ -110,11 +111,11 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-sm-6">
                 <h3>Learn the basics. <small>Browse our <a href="#">cookbook</a>.</small></h3>
               </div>
-              <div class="col-md-6 img-get-started">
-                <img src="/images/screenshot-cookbook.png">
+              <div class="col-sm-6 img-get-started">
+                <img class="img-responsive hidden-xs" src="/images/screenshot-cookbook.png">
               </div>
             </div>
           </div>
@@ -123,11 +124,11 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-sm-6">
                 <h3>Write an app! <small>Use our <a href="#">documentation</a> if you get stuck.</small></h3>
               </div>
-              <div class="col-md-6 img-get-started">
-                <img src="/images/screenshot-documentation.png">
+              <div class="col-sm-6 img-get-started">
+                <img class="img-responsive hidden-xs" src="/images/screenshot-documentation.png">
               </div>
             </div>
           </div>
@@ -136,11 +137,11 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-sm-6">
                 <h3>Get involved. <small>Check out our <a href="#">source on Github</a>.</small></h3>
               </div>
-              <div class="col-md-6 img-get-started">
-                <img src="/images/screenshot-duck-plus-octocat.png">
+              <div class="col-sm-6 img-get-started">
+                <img class="img-responsive hidden-xs" src="/images/screenshot-duck-plus-octocat.png">
               </div>
             </div>
           </div>
