Add buttons for download and view on Github.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,28 @@
           <div class="col-md-6">
             <h1 class="vwf-title">The Next 3D Platform<br>Is Your Browser</h1>
             <p>Create interactive, multi-user apps without the headache.</p>
-            <br>
-            <p>Create your own Pong app in 10 minutes. Check out our <a href="#">Getting Started Guide</a>.</p>
+            <!-- <p>Create your own Pong app in 10 minutes. Check out our <a href="#">Getting Started Guide</a>.</p> -->
+            <button type="button" class="btn btn-default btn-lg github-view">
+              View on Github &nbsp;
+              <img class="github-img" src="/images/github-mark.png"/>
+            </button>
+            <button type="button" class="btn btn-primary btn-lg">
+              Install VWF &nbsp;
+              <span class="glyphicon glyphicon-download-alt"></span>
+            </button>
+
+            <br/>
+
+<!--             <div class="input-group">
+              <span class="input-group-addon ">Install VWF</span>
+              <input type="text" class="form-control">
+              <span class="input-group-btn">
+                <button class="btn btn-info" type="button">Copy!</button>
+              </span>
+            </div>
+ -->
+            <br/>
+
           </div>
           
           <div class="col-md-6 hidden-xs">
