--- a/index.html
+++ b/index.html
@@ -1,197 +1,141 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Virtual World Framework</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/vwf.css" rel="stylesheet">
+---
+layout: default
+title: Virtual World Framework
+---
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
+<div class="jumbotron">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h1 class="vwf-title">The Next 3D Platform<br>Is Your Browser</h1>
+        <p>Create interactive, multi-user apps without the headache.</p>
+        <!-- <p>Create your own Pong app in 10 minutes. Check out our <a href="#">Getting Started Guide</a>.</p> -->
+        <button type="button" class="btn btn-default btn-lg github-view">
+          View on Github &nbsp;
+          <img class="github-img" src="/images/github-mark.png"/>
+        </button>
+        <button type="button" class="btn btn-primary btn-lg">
+          Install VWF &nbsp;
+          <span class="glyphicon glyphicon-download-alt"></span>
+        </button>
 
-    <div class="navbar navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">
-            <img src="/images/vwf-logo-100x100.png" class="pull-left" alt="VWF Duck Logo">
-            <span class="pull-right">Virtual<br>World<br>Framework</span>
-          </a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#">Getting Started</a></li>
-            <li><a href="#">Demos</a></li>
-            <li><a href="#">Documentation</a></li>
-            <li><a href="#">Downloads</a></li>
-          </ul>
-          <a class="btn btn-info navbar-btn pull-right" role="button" href="#">View on Github</a>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-
-    <div class="jumbotron">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <h1 class="vwf-title">The Next 3D Platform<br>Is Your Browser</h1>
-            <p>Create interactive, multi-user apps without the headache.</p>
-            <!-- <p>Create your own Pong app in 10 minutes. Check out our <a href="#">Getting Started Guide</a>.</p> -->
-            <button type="button" class="btn btn-default btn-lg github-view">
-              View on Github &nbsp;
-              <img class="github-img" src="/images/github-mark.png"/>
-            </button>
-            <button type="button" class="btn btn-primary btn-lg">
-              Install VWF &nbsp;
-              <span class="glyphicon glyphicon-download-alt"></span>
-            </button>
-
-            <br/>
+        <br/>
 
 <!--             <div class="input-group">
-              <span class="input-group-addon ">Install VWF</span>
-              <input type="text" class="form-control">
-              <span class="input-group-btn">
-                <button class="btn btn-info" type="button">Copy!</button>
-              </span>
-            </div>
- -->
-            <br/>
+          <span class="input-group-addon ">Install VWF</span>
+          <input type="text" class="form-control">
+          <span class="input-group-btn">
+            <button class="btn btn-info" type="button">Copy!</button>
+          </span>
+        </div>
+-->
+        <br/>
 
+      </div>
+      
+      <div class="col-md-6 hidden-xs">
+        <div class="panel panel-default vwf-panel">
+          <div class="panel-body">
+            <iframe class="vwf-frame" id="pongFrame" frameborder="0" src=""></iframe>
           </div>
-          
-          <div class="col-md-6 hidden-xs">
-            <div class="panel panel-default vwf-panel">
-              <div class="panel-body">
-                <iframe class="vwf-frame" id="pongFrame" frameborder="0" src=""></iframe>
-              </div>
-              <div class="panel-footer">
-                <p class="small">
-                  Play VWF Pong with a friend with the below URL.
-                </p>
-                <div class="input-group">
-                  <input type="text" class="form-control" id="vwfPongId" placeholder="Loading VWF..." disabled="true">
-                  <span class="input-group-btn">
-                    <button id="copy-button" data-clipboard-target="vwfPongId" class="btn btn-info" type="button" disabled="disabled">Copy and share!</button>
-                  </span>
-                </div>
-              </div>
+          <div class="panel-footer">
+            <p class="small">
+              Play VWF Pong with a friend with the below URL.
+            </p>
+            <div class="input-group">
+              <input type="text" class="form-control" id="vwfPongId" placeholder="Loading VWF..." disabled="true">
+              <span class="input-group-btn">
+                <button id="copy-button" data-clipboard-target="vwfPongId" class="btn btn-info" type="button" disabled="disabled">Copy and share!</button>
+              </span>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
+</div>
 
-    <div class="container">
-      <div class="row feature-row">
-        <div class="col-sm-4">
-          <img class="img-responsive center-block" src="/images/collaboration-icon.png">
-          <h3>Collaborative</h3>
-          <p>
-            Seamlessly share state between users.
-          </p>
-        </div>
-        <div class="col-sm-4">
-          <img class="img-responsive center-block" src="/images/3d-glasses-icon.png">
-          <h3>Immersive</h3>
-          <p>
-            Go beyond text and images. 3D. WebRTC. Or roll your own driver and the sky's the limit.
-          </p>
-        </div>
-        <div class="col-sm-4">
-          <img class="img-responsive center-block" src="/images/toolbox-icon.png">
-          <h3>Integrated</h3>
-          <p>
-            All the tools you need in one place. It just works.
-          </p>
+<div class="container">
+  <div class="row feature-row">
+    <div class="col-sm-4">
+      <img class="img-responsive center-block" src="/images/collaboration-icon.png">
+      <h3>Collaborative</h3>
+      <p>
+        Seamlessly share state between users.
+      </p>
+    </div>
+    <div class="col-sm-4">
+      <img class="img-responsive center-block" src="/images/3d-glasses-icon.png">
+      <h3>Immersive</h3>
+      <p>
+        Go beyond text and images. 3D. WebRTC. Or roll your own driver and the sky's the limit.
+      </p>
+    </div>
+    <div class="col-sm-4">
+      <img class="img-responsive center-block" src="/images/toolbox-icon.png">
+      <h3>Integrated</h3>
+      <p>
+        All the tools you need in one place. It just works.
+      </p>
+    </div>
+  </div>
+</div><!-- /.container -->
+
+<div class="get-started">
+  <div class="container">
+    <h2>Ready To Get Started?</h2>
+
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-sm-6">
+            <h3>Get inspired. <small>Check out other <a href="#">demos</a> for ideas of what's possible.</small></h3>
+          </div>
+          <div class="col-sm-6 img-get-started">
+            <img class="img-responsive hidden-xs" src="/images/screenshot-bzflag.png">
+          </div>
         </div>
       </div>
-    </div><!-- /.container -->
+    </div>
 
-    <div class="get-started">
-      <div class="container">
-        <h2>Ready To Get Started?</h2>
-
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <div class="row">
-              <div class="col-sm-6">
-                <h3>Get inspired. <small>Check out other <a href="#">demos</a> for ideas of what's possible.</small></h3>
-              </div>
-              <div class="col-sm-6 img-get-started">
-                <img class="img-responsive hidden-xs" src="/images/screenshot-bzflag.png">
-              </div>
-            </div>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-sm-6">
+            <h3>Learn the basics. <small>Browse our <a href="#">cookbook</a>.</small></h3>
+          </div>
+          <div class="col-sm-6 img-get-started">
+            <img class="img-responsive hidden-xs" src="/images/screenshot-cookbook.png">
           </div>
         </div>
-
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <div class="row">
-              <div class="col-sm-6">
-                <h3>Learn the basics. <small>Browse our <a href="#">cookbook</a>.</small></h3>
-              </div>
-              <div class="col-sm-6 img-get-started">
-                <img class="img-responsive hidden-xs" src="/images/screenshot-cookbook.png">
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <div class="row">
-              <div class="col-sm-6">
-                <h3>Write an app! <small>Use our <a href="#">documentation</a> if you get stuck.</small></h3>
-              </div>
-              <div class="col-sm-6 img-get-started">
-                <img class="img-responsive hidden-xs" src="/images/screenshot-documentation.png">
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <div class="row">
-              <div class="col-sm-6">
-                <h3>Get involved. <small>Check out our <a href="#">source on Github</a>.</small></h3>
-              </div>
-              <div class="col-sm-6 img-get-started">
-                <img class="img-responsive hidden-xs" src="/images/screenshot-duck-plus-octocat.png">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div><!-- /.container -->
-    </div><!-- /.feature-wrap -->
-
-    <!-- Footer
-    ================================================== -->
-    <footer class="vwf-footer">
-      <div class="container">
-        <p>Development of the Virtual World Framework is sponsored by the Department of Defense and is licensed using Apache II. Source is available on Github.</p>
-        <p>"Collaboration" symbol by Krisada, "Toolbox" symbol by Dolly Vu, "3D Glasses" symbol by Fabio Grande, from <a href="http://thenounproject.com">The Noun Project</a> collection.
       </div>
-    </footer>
+    </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery-1.10.2.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/ZeroClipboard.min.js"></script>
-    <script src="js/index.js"></script>
-  </body>
-</html>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-sm-6">
+            <h3>Write an app! <small>Use our <a href="#">documentation</a> if you get stuck.</small></h3>
+          </div>
+          <div class="col-sm-6 img-get-started">
+            <img class="img-responsive hidden-xs" src="/images/screenshot-documentation.png">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-sm-6">
+            <h3>Get involved. <small>Check out our <a href="#">source on Github</a>.</small></h3>
+          </div>
+          <div class="col-sm-6 img-get-started">
+            <img class="img-responsive hidden-xs" src="/images/screenshot-duck-plus-octocat.png">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div><!-- /.container -->
+</div><!-- /.feature-wrap -->
+
