Add images locally.

--- a/demos.html
+++ b/demos.html
@@ -81,42 +81,42 @@ title: Demos - Virtual World Framework
       {
         name: 'bzflag',
         description: 'The bzflag app is VWF\'s version of the classic arcade game. Use the WASD keys to move and the Enter key to fire your laser cannon. Use the chat feature to communicate and taunt your opponents, but most of all look out for opposing tanks!', 
-        hyperlink: '../bzflag',
+        hyperlink: 'http://virtual.wf/bzflag',
         logo: '../bzflag/index.vwf.catalog.png',
         core: true
       },
       {
         name: 'humvee-lesson',
         description: 'Using the VWF lesson configuration and interface, the humvee lesson app walks the user through the process of starting and driving the humvee.', 
-        hyperlink: '../humvee-lesson',
+        hyperlink: 'http://virtual.wf/humvee-lesson',
         logo: '../humvee-lesson/index.vwf.catalog.png',
         core: true
       },
       {
         name: 'radio-lesson',
         description: 'The radio lesson app uses VWF\'s lesson interface to walk a user through the basic operations of the radio.', 
-        hyperlink: '../radio-lesson',
+        hyperlink: 'http://virtual.wf/radio-lesson',
         logo: '../radio-lesson/index.vwf.catalog.png',
         core: true
       },
       {
         name: 'agi/cesium',
         description: '<a target="_blank" href="http://www.agi.com/">Analytical Graphics, Inc\'s (AGI)</a> Cesium is a web-based globe and map engine for visualizing dynamic data. This demo app allows a user to have synchronized camera views across multiple clients. Pressing the "R" key will reset the synchronized views across all instances.', 
-        hyperlink: '../agi/cesium#!cesium',
+        hyperlink: 'http://virtual.wf/agi/cesium#!cesium',
         logo: '../agi/cesium/index.vwf.catalog.jpg',
         core: true
       },
       {
         name: 'minesweeper',
         description: 'VWF\'s take on the classic Minesweeper game. Click tiles to turn them over and see the number of neighboring mines. Unveiling all numbers wins the game - select the wrong tile and it\'s game over.', 
-        hyperlink: '../minesweeper',
+        hyperlink: 'http://virtual.wf/minesweeper',
         logo: '../minesweeper/index.vwf.catalog.png',
         core: true
       },
       {
         name: 'tile-puzzle-2D',
         description: 'Apps don\'t have to be 3D! The 2D tile puzzle is an example of a VWF app that does not use 3D graphics or models. Play by clicking on a tile to move it to the open space.', 
-        hyperlink: '../tile-puzzle-2D',
+        hyperlink: 'http://virtual.wf/tile-puzzle-2D',
         logo: '../tile-puzzle-2D/index.vwf.catalog.png',
         core: true
       }
