Fix broken link.

--- a/demos.html
+++ b/demos.html
@@ -103,7 +103,7 @@ title: Demos - Virtual World Framework
         name: 'agi/cesium',
         description: '<a target="_blank" href="http://www.agi.com/">Analytical Graphics, Inc\'s (AGI)</a> Cesium is a web-based globe and map engine for visualizing dynamic data. This demo app allows a user to have synchronized camera views across multiple clients. Pressing the "R" key will reset the synchronized views across all instances.', 
         hyperlink: 'http://virtual.wf/agi/cesium#!cesium',
-        logo: '/images/gallery-agi-cesium.png',
+        logo: '/images/gallery-agi-cesium.jpg',
         core: true
       },
       {
