Move index.js file to scripts content block and remove from footer page as it's not needed except on the home page.

--- a/index.html
+++ b/index.html
@@ -138,3 +138,7 @@ title: Virtual World Framework
 </div><!-- /.feature-wrap -->
 
 <script src="/js/platform.js"></script>
+
+{% contentfor scripts %}
+    <script src="js/index.js"></script>
+{% endcontentfor %}
