--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@ title: Virtual World Framework
   </div><!-- /.container -->
 </div><!-- /.feature-wrap -->
 
-<script src="/js/platform.js"></script>
-
 {% contentfor scripts %}
+    <script src="js/platform.js"></script>
     <script src="js/index.js"></script>
 {% endcontentfor %}
