Update links on demos page to point to demo.virtual.wf. Update main page links under 'Ready to Get Started'

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ title: Virtual World Framework
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-6">
-            <h3>Get inspired. <small>Check out other <a href="#">demos</a> for ideas of what's possible.</small></h3>
+            <h3>Get inspired. <small>Check out other <a href="/demos.html">demos</a> for ideas of what's possible.</small></h3>
           </div>
           <div class="col-sm-6 img-get-started">
             <img class="img-responsive hidden-xs" src="/images/screenshot-bzflag.png">
@@ -100,7 +100,7 @@ title: Virtual World Framework
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-6">
-            <h3>Learn the basics. <small>Browse our <a href="#">cookbook</a>.</small></h3>
+            <h3>Learn the basics. <small>Browse our <a href="/documentation.html#cookbook">cookbook</a>.</small></h3>
           </div>
           <div class="col-sm-6 img-get-started">
             <img class="img-responsive hidden-xs" src="/images/screenshot-cookbook.png">
@@ -113,7 +113,7 @@ title: Virtual World Framework
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-6">
-            <h3>Write an app! <small>Use our <a href="#">documentation</a> if you get stuck.</small></h3>
+            <h3>Write an app! <small>Use our <a href="/documentation.html">documentation</a> if you get stuck.</small></h3>
           </div>
           <div class="col-sm-6 img-get-started">
             <img class="img-responsive hidden-xs" src="/images/screenshot-documentation.png">
@@ -126,7 +126,7 @@ title: Virtual World Framework
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-6">
-            <h3>Get involved. <small>Check out our <a href="#">source on GitHub</a>.</small></h3>
+            <h3>Get involved. <small>Check out our <a href="http://github.com/virtual-world-framework/vwf">source on GitHub</a>.</small></h3>
           </div>
           <div class="col-sm-6 img-get-started">
             <img class="img-responsive hidden-xs" src="/images/screenshot-duck-plus-octocat.png">
