Update compatibility check to include ECMAScript5 (has problems displaying in IE8)

--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@ title: Virtual World Framework
         <div class="panel panel-default vwf-panel">
           <div class="panel-body">
             <div class="well" id="errorBox">
-              <h3 id="errorTitle"><noscript>I need javascript.</noscript></h3> 
-              <p id="errorText">
-                <noscript>To see our awesome demo, you will need to enable javascript in your browser.</noscript>
-              </p>
+              <noscript>
+                <h3>I need javascript.</h3> 
+                <p>
+                  To see our awesome demo, you will need to enable javascript in your browser.
+                </p>
+              </noscript>
             </div>
             <iframe class="vwf-frame hide" id="pongFrame" frameborder="0" src=""></iframe>
           </div>
