--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ title: Virtual World Framework
 <div class="jumbotron">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-lg">
-        <h1 class="vwf-title">The Next 3D Platform<br>Is Your Browser</h1>
+      <div class="col-md-5 col-lg-6">
+        <h1 class="vwf-title">The Next 3D Platform<br class="hidden-sm"> Is Your Browser</h1>
         <p>Create interactive, multi-user apps without the headache.</p>
         <!-- <p>Create your own Pong app in 10 minutes. Check out our <a href="#">Getting Started Guide</a>.</p> -->
         <a href="http://github.com/virtual-world-framework/vwf" class="btn btn-default btn-lg github-view" role="button">
@@ -34,7 +34,7 @@ title: Virtual World Framework
         </div>
       </div>
       
-      <div class="col-md-6 hidden-xs">
+      <div class="col-md-7 col-lg-6 hidden-xs">
         <div class="panel panel-default vwf-panel">
           <div class="panel-body"> <iframe class="vwf-frame" id="pongFrame" frameborder="0" src=""></iframe>
           </div>
