Update Windows installer link.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Virtual World Framework
           View on GitHub &nbsp;
           <img class="github-img" src="/images/github-mark.png"/>
         </a>
-        <button type="button" class="call-to-action windows-install btn btn-primary btn-lg hide">
+        <a href="http://download.virtualworldframework.com/files/VWF_Windows_Install.exe" role="button" class="call-to-action windows-install btn btn-primary btn-lg hide">
           Install VWF &nbsp;
           <span class="glyphicon glyphicon-download-alt"></span>
         </button>
