Allow people to select text in input fields.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: Virtual World Framework
         <div id="macInstall" class="hide">
           <span class="small">Paste the following in your terminal:</span>
           <div class="input-group">
-            <input type="text" id="installCommand" class="form-control" value="curl -kL http://get.virtual.wf  | sh">
+            <input type="text" id="installCommand" class="form-control" readonly="readonly" value="curl -kL http://get.virtual.wf  | sh">
             <span class="input-group-btn">
               <button id="copyInstallButton" data-clipboard-target="installCommand" class="btn btn-info copy-button" type="button">Copy!</button>
             </span>
@@ -50,7 +50,7 @@ title: Virtual World Framework
           <div class="panel-footer hide">
             <span class="small">Play VWF Pong with a friend with the below URL:</span>
             <div class="input-group">
-              <input type="text" class="form-control" id="vwfPongId" placeholder="Loading VWF...">
+              <input type="text" class="form-control" id="vwfPongId" readonly="readonly" placeholder="Loading VWF...">
               <span class="input-group-btn">
                 <button id="copyButton" data-clipboard-target="vwfPongId" class="btn btn-info copy-button" type="button">Copy and share!</button>
               </span>
