Change VWF tagline

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Virtual World Framework
   <div class="container">
     <div class="row">
       <div class="col-md-5 col-lg-6">
-        <h1 class="vwf-title">The Next 3D Platform<br class="hidden-sm"> Is Your Browser</h1>
+        <h1 class="vwf-title">The Web is a lonely place ... invite a friend.</h1>
         <p>Create interactive, multi-user apps without the headache.</p>
         <!-- <p>Create your own Pong app in 10 minutes. Check out our <a href="#">Getting Started Guide</a>.</p> -->
         <a href="http://github.com/virtual-world-framework/vwf" class="btn btn-default btn-lg github-view call-to-action" role="button">
