Update front page "Ready to get started" section to point to tutorial

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ title: Virtual World Framework
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-6">
-            <h3>Get inspired. <small>Check out other <a href="/demos.html">demos</a> for ideas of what's possible.</small></h3>
+            <h3>Get inspired. <small>Check out our <a href="/demos.html">demos</a> for ideas of what's possible.</small></h3>
           </div>
           <div class="col-sm-6 img-get-started">
             <img class="img-responsive hidden-xs" src="/images/screenshot-bzflag.png">
@@ -107,7 +107,7 @@ title: Virtual World Framework
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-6">
-            <h3>Learn the basics. <small>Browse our <a href="/documentation.html#cookbook">cookbook</a>.</small></h3>
+            <h3>Learn the basics. <small>Follow our <a href="/getting_started.html">tutorial</a>.</small></h3>
           </div>
           <div class="col-sm-6 img-get-started">
             <img class="img-responsive hidden-xs" src="/images/screenshot-cookbook.png">
