Put browser compatibility information at the top of the demos page

--- a/index.html
+++ b/index.html
@@ -146,5 +146,6 @@ title: Virtual World Framework
 
 {% contentfor scripts %}
     <script src="js/platform.js"></script>
+    <script src="js/compatibility.js"></script>
     <script src="js/index.js"></script>
 {% endcontentfor %}
