Add pong app to top of tutorial page

--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@ title: Virtual World Framework
 </div><!-- /.feature-wrap -->
 
 {% contentfor scripts %}
-    <script src="js/platform.js"></script>
-    <script src="js/compatibility.js"></script>
-    <script src="js/index.js"></script>
+  <script src="js/platform.js"></script>
+  <script src="js/compatibility.js"></script>
+  <script src="js/utility.js"></script>
+  <script src="js/index.js"></script>
 {% endcontentfor %}
