Change the verbiage around the main-page duck to make it more personal

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Virtual World Framework
     <div class="row">
       <div class="col-md-6 col-lg-6">
         <h1 class="vwf-title">The Web is a lonely place ... invite a friend.</h1>
-        <p>Imagine someone in New York...</p>
+        <p>Imagine that you are in New York...</p>
         <div class="well errorBox" id="errorBox1">
           <noscript>
             <h3>I need javascript.</h3> 
@@ -32,7 +32,7 @@ title: Virtual World Framework
         </div>
         <iframe class="vwf-frame hide" id="app2" frameborder="0" src=""></iframe>
         <p>...working with someone in San Francisco ... sharing a 100% synchronized workspace.</p>
-        <p>On VWF, you can build web apps like that.</p>
+        <p>On VWF, you can build web apps that make that possible.</p>
                 <a href="http://github.com/virtual-world-framework/vwf" class="btn btn-default btn-lg github-view call-to-action" role="button">
           View on GitHub &nbsp;
           <img class="github-img" src="/images/github-mark.png"/>
