--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@ title: Virtual World Framework
           </noscript>
         </div>
         <iframe class="vwf-frame hide" id="app1" frameborder="0" src=""></iframe>
-        <p>(Click the duck to see it spin in synchrony)</p>
       </div>
       
       <div class="col-md-6 col-lg-6">
@@ -33,7 +32,14 @@ title: Virtual World Framework
         <iframe class="vwf-frame hide" id="app2" frameborder="0" src=""></iframe>
         <p>...working with someone in San Francisco ... sharing a 100% synchronized workspace.</p>
         <p>On VWF, you can build web apps that make that possible.</p>
-                <a href="http://github.com/virtual-world-framework/vwf" class="btn btn-default btn-lg github-view call-to-action" role="button">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 col-lg-6">
+        <p>(Click the duck to see it spin in synchrony)</p>
+      </div>
+      <div class="col-md-6 col-lg-6">
+        <a href="http://github.com/virtual-world-framework/vwf" class="btn btn-default btn-lg github-view call-to-action" role="button">
           View on GitHub &nbsp;
           <img class="github-img" src="/images/github-mark.png"/>
         </a>
