Remove unnecessary -k option from Mac/Linux install curl command

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ title: Virtual World Framework
         <div id="macInstall" class="hide">
           <span class="small">Paste the following in your terminal:</span>
           <div class="input-group">
-            <input type="text" id="installCommand" class="form-control" readonly="readonly" value="curl -kL http://get.virtual.wf  | sh">
+            <input type="text" id="installCommand" class="form-control" readonly="readonly" value="curl -L http://get.virtual.wf  | sh">
             <span class="input-group-btn">
               <button id="copyInstallButton" data-clipboard-target="installCommand" class="btn btn-info copy-button" type="button">Copy!</button>
             </span>
